# python-tutorial

./: .gitignore  .pre-commit-config.yaml  README.md  requirements.txt
python-stt-sample/: config.ini
python-stt-sample/src/: sample_stt.py  stream_stt.py
src/: sample_stt.py  stream_stt.py
streamlit-webapp/: README.md  requirements.txt
streamlit-webapp/src/: main.py  model.py  utils.py
stt-chapter-generator/: .env.example  .gitignore  README.md  chapterize.py  pyproject.toml  requirements.txt  rtzr_openapi_client.py  transcribe.py
tritony-sample/: Dockerfile  README.md  build_triton_server.sh  requirements.txt
tritony-sample/model_repository/python_vad/: config.pbtxt
tritony-sample/model_repository/python_vad/1/: model.py
tritony-sample/src/: triton_client_grpc_sync_sample.py  tritony_grpc_sync_sample.py
tritony-sample/tests/: common_fixtures.py  test_model_call.py
tritony-sample/utils/: triton_client.py  wave_util.py
